--- a/samples/09-game-ui/bin/game-ui.html
+++ b/samples/09-game-ui/bin/game-ui.html
@@ -2,10 +2,10 @@
 	<head>
 		<!-- this import a default style sheet you can use for your project -->
 		<link type="text/css" href="style.css" rel="stylesheet"></link>
-		<title>Cocktail Template</title>
+		<title>Cocktail UI for the game</title>
 	</head>
 	<body>
 		<h4>This is a Cocktail html document embedded in a flash/NME app</h4>
-		<div id="button">Click to show/hide flash interface</div>
+		<div id="button">Click to show/hide the flash game</div>
 	</body>
 </html>
